DigicielFull/force-app/main/default/objects/Backlog__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Backlogs</relationshipLabel>
    <relationshipName>Backlog</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>