DigicielFull/force-app/main/default/objects/Backlog__c/fields/Backlog_Currency__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Currency__c</fullName>
    <label>Backlog Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>