DigicielFull/force-app/main/default/objects/Backlog__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>