DigicielFull/force-app/main/default/objects/Backlog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Backlog_Currency__c</columns>
    <columns>Target__c</columns>
    <columns>Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>